# splunk_soar_mcp

./: .env.example  .gitignore  README.md  github-upload-guide.md  pyproject.toml  server.py
docs/: splunk_soar_mcp_plan.md  tools-reference.md
splunk_soar_mcp/: client.py  config.py
splunk_soar_mcp/models/: inputs.py
splunk_soar_mcp/tools/: actions.py  approvals.py  artifacts.py  assets.py  comments.py  containers.py  indicators.py  lists.py  notes.py  playbooks.py  system.py
